@@ -3,6 +3,8 @@ munin (work)
   * Main: place the munin-limits lock file in rundir, not dbdir.
   * Plugin: generic/amavis now has configurable logfile location (Deb#296533).
   * Plugin: linux/irqstats should no longer fail on some systems (Deb#296452).
+  * Plugin: modified graph_args of generic/apache_processes, to work around
+    an rrdtool bug (Deb#296528).
 
 munin (1.2.0)
 
